added table for displaying library contents

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="hero-text">
+        <p>Welcome to the Library</p>
+        <p>Sssssh! Please keep your noise to a minimum</p>
+    </div>
+    <div class="lib-table">
+        <table>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Pages</th>
+            <th>Been Read?</th>
+            <tr>
+                <td>The Hobbit</td>
+                <td>J.R.R. Tolkein</td>
+                <td>255</td>
+                <td>yes</td>
+            </tr>
+            <tr>
+                <td>Game of Thrones</td>
+                <td>G.R.R. Martin</td>
+                <td>835</td>
+                <td>no</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
