styled page, fixed table spacing and content alignment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="hero-text">
-        <p>Welcome to the Library</p>
+        <h2>Welcome to the Library</h2>
         <p>Sssssh! Please keep your noise to a minimum</p>
     </div>
     <div class="lib-table">
@@ -21,14 +21,14 @@
             <tr>
                 <td>The Hobbit</td>
                 <td>J.R.R. Tolkein</td>
-                <td>255</td>
-                <td>yes</td>
+                <td style="text-align: right;">255</td>
+                <td style="text-align: center;">yes</td>
             </tr>
             <tr>
                 <td>Game of Thrones</td>
                 <td>G.R.R. Martin</td>
-                <td>835</td>
-                <td>no</td>
+                <td style="text-align: right;">835</td>
+                <td style="text-align: center;">no</td>
             </tr>
         </table>
     </div>
