--- a/index.html
+++ b/index.html
@@ -26,5 +26,33 @@
             </tbody>
         </table>
     </div>
+    <dialog id="add-book-dialog">
+        <form>
+            <label>
+                Title:
+                <input type="text" name="title"/>
+            </label>
+            <label>
+                Author:
+                <input type="text" name="author"/>
+            </label>
+            <label>
+                Pages:
+                <input type="number" name="numPages"/>
+            </label>
+            <label>
+                Have you read this?
+                <select>
+                    <option value="default">No</option>
+                    <option>yes</option>
+                </select>
+            </label>
+            <div>
+                <button value="cancel" formmethod="dialog">Cancel</button>
+                <button id="confirmBtn" value="default">Confirm</button>
+            </div>
+        </form>
+    </dialog>
+    <button id="addBook">Add Book</button>
 </body>
 </html>
