form resets when opened

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
             <p>
                 <label>
                     Title:
-                    <input type="text" name="title"/>
+                    <input type="text" id="title"/>
                 </label>
             </p>
             <p>
                 <label>
                     Author:
-                    <input type="text" name="author"/>
+                    <input type="text" id="author"/>
                 </label>
             </p>
             <p>
                 <label>
                     Pages:
-                    <input type="number" name="num-pages"/>
+                    <input type="number" id="num-pages"/>
                 </label>
             </p>
             <p>
                 <label>
                     Have you read this?
-                    <select>
-                        <option value="default">No</option>
-                        <option>yes</option>
+                    <select id="been-read">
+                        <option value="false" selected>No</option>
+                        <option value="true">yes</option>
                     </select>
                 </label>
             </p>
