--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <th>Author</th>
                     <th>Pages</th>
                     <th>Been Read?</th>
+                    <th>Remove</th>
                 </tr>
             </thead>
             <tbody>
