changed 'been read' text from true/false to 'Yes'/'No'

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <label>
                     Have you read this?
                     <select id="been-read">
-                        <option value="false" selected>No</option>
-                        <option value="true">yes</option>
+                        <option value="No" selected>No</option>
+                        <option value="Yes">Yes</option>
                     </select>
                 </label>
             </p>
