changed welcome verbiage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero-text">
         <h2>Welcome to the Library</h2>
-        <p>Sssssh! Please keep your noise to a minimum</p>
+        <p>Sshhhh! Please keep your noise to a minimum</p>
     </div>
     <div class="lib-table">
         <table>
