fixed form validation bug, created cancel button click handler

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </label>
             </p>
             <div>
-                <button value="cancel" formmethod="dialog">Cancel</button>
+                <button id="cancel-btn" value="cancel" formmethod="dialog">Cancel</button>
                 <button id="confirm-btn" value="default">Confirm</button>
             </div>
         </form>
